--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -9,8 +9,8 @@
 <% elsif flash[:notice].present? %>
   <div class="row-fluid">
     <div class="span12">
-      <div class="alert alert-notice">
-        <%= flash[:notice] %>
+      <div class="alert alert-success">
+        <%= flash[:notice]%>
       </div>
     </div>
   </div>
