--- a/app/views/stores/inventory.html.erb
+++ b/app/views/stores/inventory.html.erb
@@ -3,7 +3,7 @@
   <%= render "shared/store_sidebar" %>
     <div class="mainbar">
       <div class="page-head">
-        <h2 class="pull-left">Store Inventory</h2>
+        <h2 class="pull-left"><%= image_tag @store.logo.url(:medium) %>&nbsp;&nbsp;<%= @store.name %></h2>
         <div class="bread-crumb pull-right">
           <a href="<%= root_url(:subdomain => "") %>"><i class="icon-home"></i> Playmotrade Home</a>
           <span class="divider">/</span>
@@ -15,6 +15,7 @@
       </div>
       <div class="matter">
         <div class="container-fluid">
+        <%= render "shared/flash" %>
           <div class="row-fluid">
             <div class="span12">
                 <div class="widget wred">
