--- a/app/views/catalog_parts/show.html.erb
+++ b/app/views/catalog_parts/show.html.erb
@@ -17,15 +17,7 @@
       </div>
       <div class="matter">
         <div class="container-fluid">
-          <% if flash[:notice].present? %>
-          <div class="row-fluid">
-            <div class="span12">
-              <div class="alert alert-info">
-                <%= flash[:notice] %>
-              </div>
-            </div>
-          </div>
-          <% end %>
+          <%= render "shared/flash" %>
             <div class="row-fluid">
                 <div class="span12">
                   <div class="widget wlightblue">
