--- a/app/views/catalog_sets/show.html.erb
+++ b/app/views/catalog_sets/show.html.erb
@@ -1,20 +1,11 @@
 <% provide(:title, "Catalog") %>
 <div class="content">
-  <!-- Sidebar -->
   <%= render "shared/sidebar" %>
-  <!-- Sidebar ends -->
     <div class="mainbar">
-
-      <!-- Page heading -->
       <div class="page-head">
-        <!-- Page heading -->
         <h2 class="pull-left">Catalog</h2>
-
-
-        <!-- Breadcrumb -->
         <div class="bread-crumb pull-right">
           <a href="/"><i class="icon-home"></i> Home</a>
-          <!-- Divider -->
           <span class="divider">/</span>
           <%= link_to "Catalog", catalog_index_path %>
           <span class="divider">/</span>
@@ -22,28 +13,13 @@
           <span class="divider">/</span>
           <%= link_to @catalog_set.number, catalog_set_path(@catalog_set) %>
         </div>
-
         <div class="clearfix"></div>
-
       </div>
-      <!-- Page heading ends -->
-
-      <!-- Matter -->
-
       <div class="matter">
         <div class="container-fluid">
-          <% if flash[:notice].present? %>
-          <div class="row-fluid">
-            <div class="span12">
-              <div class="alert alert-info">
-                <%= flash[:notice] %>
-              </div>
-            </div>
-          </div>
-          <% end %>
+          <%= render "shared/flash" %>
             <div class="row-fluid">
                 <div class="span12">
-
                   <div class="widget wlightblue">
                     <div class="widget-head">
                       <div class="pull-left"><%= @catalog_set.name %></div>
@@ -54,10 +30,20 @@
                       <div class="row-fluid">
                         <div class="span6">
                           <%= image_tag @catalog_set.image.url(:large), :class => 'catalog-img' %>
+                          <ul class="activity">
+                          <% if current_user.try(:store).present? %>
+                            <li>
+                              <div class="btn-group pull-left ">
+                                <a href="#addToInventory" data-toggle="modal" role="button" class="btn btn-success"><i class='icon icon-plus-sign'></i>&nbsp;&nbsp;Add To Store Inventory</a>
+                              </div>
+                              <br/>
+                              <br/>
+                            </li>
+                            <% end %>
+                          </ul>
                         </div>
                         <div class="span6">
                           <ul class="activity">
-
                             <li>
                               <strong>Theme:</strong> <%= @catalog_set.theme.to_s %>
                             </li>
@@ -93,24 +79,53 @@
                           </ul>
                         </div>
                       </div>
-
                       <div class="clearfix"></div>
                     </div>
                   </div>
-
                 </div>
-
             </div>
-
         </div>
       </div>
-
-    <!-- Matter ends -->
-
     </div>
-
-   <!-- Mainbar ends -->
    <div class="clearfix"></div>
-
 </div>
-<!-- Content ends -->
+
+<div id="addToInventory" class="modal hide fade in" tabindex="-1" role="dialog" aria-labelledby="inventory-header" aria-hidden="false">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="inventory-header">Add Part To Store Inventory</h3>
+  </div>
+  <%= form_for(@store_inventory_set, :url => add_set_to_inventory_store_path) do |f| %>
+  <div class="modal-body">
+    <div class="control-group">
+      <label class="control-label" for="quantity">Quantity</label>
+      <div class="controls">
+        <%= f.text_field :quantity, :class => "input-large" %>
+      </div>
+    </div>
+    <div class="control-group">
+      <label class="control-label" for="price">Price</label>
+      <div class="controls">
+        <%= f.text_field :price, :class => "input-large", :placeholder => "USD" %>
+      </div>
+    </div>
+    <div class="control-group">
+      <label class="control-label" for="condition">Condition</label>
+      <div class="controls">
+        <%= f.select(:condition, options_for_select(StoreInventoryPart::CONDITIONS, "New")) %>
+      </div>
+    </div>
+    <div class="control-group">
+      <label class="control-label" for="comment">Comment</label>
+      <div class="controls">
+        <%= f.text_area :comment, :class => "input-large" %>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn btn-success pull-left">Advanced Form</a>
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    <button class="btn btn-primary" type="submit">Add to Inventory</button>
+  </div>
+  <% end %>
+</div>
