--- a/app/views/shared/_store_sidebar.html.erb
+++ b/app/views/shared/_store_sidebar.html.erb
@@ -12,34 +12,24 @@
       </form>
     </div>
     <ul class="navi">
-      <li class="nred">
+      <li class="nlightblue">
         <%= link_to root_url(:subdomain => @store.alias) do %>
           <i class="icon-home"></i> Store Home
           <span class="pull-right"><i class="icon-angle-right"></i></span>
         <% end %>
       </li>
-      <li class="has_submenu nred">
-        <a href="#">
+      <li class="nred open">
+        <%= link_to store_inventory_path(@store, :all)  do %>
           <i class="icon-th"></i> Browse Inventory
           <span class="pull-right"><i class="icon-angle-right"></i></span>
-        </a>
+        <% end %>
         <ul>
           <li><%= link_to "All Parts", store_inventory_path(@store, :parts) %></li>
           <li><%= link_to "All Sets", store_inventory_path(@store, :sets) %></li>
           <li><a href="post.html">On My Wishlist</a></li>
         </ul>
       </li>
-      <li class="has_submenu nred">
-        <a href="#">
-          <i class="icon-th"></i> My Store Orders
-          <span class="pull-right"><i class="icon-angle-right"></i></span>
-        </a>
-
-        <ul>
-          <li><a href="post.html">Open</a></li>
-          <li><a href="post.html">Closed</a></li>
-        </ul>
-      </li>
+      <%= render "stores/shared/sidebar_inventory", :store => @store %>
     </ul>
   </div>
 </div>
