--- a/app/views/stores/inventory.html.erb
+++ b/app/views/stores/inventory.html.erb
@@ -4,26 +4,20 @@
     <div class="mainbar">
       <div class="page-head">
         <h2 class="pull-left"><%= image_tag @store.logo.url(:medium) %>&nbsp;&nbsp;<%= @store.name %></h2>
-        <div class="bread-crumb pull-right">
-          <a href="<%= root_url(:subdomain => "") %>"><i class="icon-home"></i> Playmotrade Home</a>
-          <span class="divider">/</span>
-          <%= link_to "Stores", stores_url(:subdomain => "") %>
-          <span class="divider">/</span>
-          <%= link_to @store.name, root_url(:subdomain => @store.alias) %>
-        </div>
         <div class="clearfix"></div>
       </div>
       <div class="matter">
         <div class="container-fluid">
         <%= render "shared/flash" %>
           <div class="row-fluid">
-            <div class="span12">
-                <div class="widget wred">
+            <div class="span8">
+              <div class="widget wviolet">
                 <div class="widget-head">
+                  <%= @type.to_s.capitalize %>
                   <div class="clearfix"></div>
                 </div>
                   <div class="widget-content">
-                    <table class="table">
+                    <table class="table table-hover">
                       <tbody>
                         <% @store_inventory.each do |item| %>
                           <%= render "stores/inventory/#{@type.to_s}", :item => item %>
@@ -37,7 +31,7 @@
                     </div>
                 </div>
               </div>
-          </div>
+              <%= render "stores/shared/store_info", :store => @store %>
         </div>
       </div>
     </div>
