--- a/app/views/stores/shared/_sidebar_inventory.html.erb
+++ b/app/views/stores/shared/_sidebar_inventory.html.erb
@@ -4,8 +4,13 @@
     <span class="pull-right"><i class="icon-angle-right"></i></span>
   </a>
   <ul>
-    <% @store.store_inventory.part_categories.each do |category| %>
-      <li><a href="#"><%= category %></a></li>
+    <% @store.store_inventory.part_categories.each do |cat_id| %>
+      <li>
+        <a href="#">
+          <%= CatalogPartsCategory.find_by(:id => cat_id).try(:name) %>
+          <span class="label label-part-total"><%= @store.store_inventory.total_parts_by_category(cat_id) %></span>
+        </a>
+      </li>
     <% end %>
   </ul>
 </li>
