--- a/app/views/stores/inventory/_cart_row.html.erb
+++ b/app/views/stores/inventory/_cart_row.html.erb
@@ -8,7 +8,8 @@
   <td class="text-right">
     <div class="text-right store-prices">
       <strong><%= item.quantity %></strong> X <strong>$<%= number_with_precision item.price, :precision => 2 %></strong><br/>
-      <strong>Total: $<%= number_with_precision item.total, :precision => 2 %></strong>
+      <strong>Total: $<%= number_with_precision item.total, :precision => 2 %></strong><br/>
+      <%= link_to "Remove", remove_items_from_cart_path(@store, item), :method => :delete, :data => {:confirm => "Are you sure?"}, :class => "btn btn-danger" %>
     </div>
   </td>
 </tr>
