More cart work, DRY up inventory items

--- a/app/views/stores/inventory.html.erb
+++ b/app/views/stores/inventory.html.erb
@@ -20,7 +20,7 @@
                     <table class="table table-hover">
                       <tbody>
                         <% @store_inventory.each do |item| %>
-                          <%= render "stores/inventory/#{@type.to_s}", :item => item %>
+                          <%= render "stores/inventory/inventory_row", :item => item %>
                         <% end %>
                       </tbody>
                     </table>
