--- a/app/views/stores/inventory/_cart_row.html.erb
+++ b/app/views/stores/inventory/_cart_row.html.erb
@@ -1,5 +1,9 @@
 <tr>
-  <td><%= image_tag item.image %></td>
+  <td>
+    <%= link_to catalog_part_url(item.catalog_object, :subdomain => ""), :rel => 'popover', :class => 'part-preview', :"data-content" => "#{image_tag item.image(:medium).html_safe}" do %>
+      <%= image_tag item.image %>
+    <% end  %>
+  </td>
   <td>
     <strong>Condition:</strong> <%= item.condition %><br/>
     <strong><%= item.name %></strong><br/>
