--- a/app/views/catalog_parts/show.html.erb
+++ b/app/views/catalog_parts/show.html.erb
@@ -19,11 +19,10 @@
         <div class="container-fluid">
           <%= render "shared/flash" %>
             <div class="row-fluid">
-                <div class="span12">
+                <div class="span8">
                   <div class="widget wlightblue">
                     <div class="widget-head">
                       <div class="pull-left"><%= @catalog_part.number %> | <%= @catalog_part.name %></div>
-                      <div class="pull-right"><%= link_to "<i class='icon icon-pencil'></i>&nbsp;&nbsp;Edit Part".html_safe, edit_catalog_part_path(@catalog_part), :class => 'btn btn-warning' %></div>
                       <div class="clearfix"></div>
                     </div>
                     <div class="widget-content">
@@ -52,15 +51,6 @@
                               <span class="label label-info"><%= tag.name %></span>
                               <% end %>
                             </li>
-                            <% if current_user.try(:store).present? %>
-                            <li>
-                              <div class="btn-group pull-left ">
-                                <a href="#addToInventory" data-toggle="modal" role="button" class="btn btn-success"><i class='icon icon-plus-sign'></i>&nbsp;&nbsp;Add To Store Inventory</a>
-                              </div>
-                              <br/>
-                              <br/>
-                            </li>
-                            <% end %>
                           </ul>
                         </div>
                         <div class="span8">
@@ -95,6 +85,7 @@
                     </div>
                   </div>
                 </div>
+                <%= render "shared/catalog_toolbar" %>
             </div>
         </div>
       </div>
@@ -138,6 +129,39 @@
     <a href="#" class="btn btn-success pull-left">Advanced Form</a>
     <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
     <button class="btn btn-primary" type="submit">Add to Inventory</button>
+  </div>
+  <% end %>
+</div>
+
+<div id="addToWishlist" class="modal hide fade in" tabindex="-1" role="dialog" aria-labelledby="wishlist-header" aria-hidden="false">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="wishlist-header">Add Part To Wishlist</h3>
+  </div>
+  <%= form_for(@wishlist_item, :url => add_item_wishlist_path) do |f| %>
+  <div class="modal-body">
+    <div class="control-group">
+      <label class="control-label" for="condition">Add to Existing Wishlist</label>
+      <div class="controls">
+        <%= f.select(:wishlist, options_for_select(current_user.wishlists)) %>
+      </div>
+    </div>
+    <div class="control-group">
+      <label class="control-label" for="quantity">Add to New Wishlist</label>
+      <div class="controls">
+        <%= text_field_tag :new_wishlist_name, nil, :class => "input-large" %>
+      </div>
+    </div>
+    <div class="control-group">
+      <label class="control-label" for="quantity">Minimum Quantity</label>
+      <div class="controls">
+        <%= f.text_field :min_quantity, :class => "input-large" %>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    <button class="btn btn-primary" type="submit">Add to Wishlist</button>
   </div>
   <% end %>
 </div>
