--- a/app/views/shared/_catalog_part_toolbar.html.erb
+++ b/app/views/shared/_catalog_part_toolbar.html.erb
@@ -1,4 +1,4 @@
-<div class="span4">
+
   <div class="widget wblue">
     <div class="widget-head">
       Tools
@@ -7,12 +7,14 @@
     <div class="widget-content">
       <div class="sidebar sidebar-right">
         <ul class="navi">
+          <% if can? :edit, @catalog_part %>
           <li class="ngrey">
             <%= link_to edit_catalog_part_path(@catalog_part) do %>
               <i class="icon icon-pencil"></i>Edit Part
               <span class="pull-right"><i class="icon-angle-right"></i></span>
             <% end %>
           </li>
+          <% end %>
           <% if current_user.try(:store).present? %>
           <li class="ngrey">
             <a href="#addToInventory" data-toggle="modal">
@@ -21,12 +23,14 @@
             </a>
           </li>
           <% end %>
+          <% if user_signed_in? %>
           <li class="ngrey">
             <a href="#addToWishlist" data-toggle="modal">
               <i class='icon icon-bookmark'></i>Add To Wishlist
               <span class="pull-right"><i class="icon-angle-right"></i></span>
             </a>
           </li>
+          <% end %>
         </ul>
       </div>
     </div>
@@ -34,5 +38,5 @@
       <div class="clearfix"></div>
     </div>
   </div>
-</div>
+
 
