--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -24,6 +24,7 @@
             </div>
           </div>
           <% else %>
+          <%= render "shared/flash" %>
           <div class="row-fluid">
             <div class="span12">
               <div class="widget wred">
@@ -33,15 +34,6 @@
                 </div>
                 <div class="widget-content">
                   <div class="padd">
-                    <% if flash[:error].present? %>
-                    <div class="row-fluid">
-                      <div class="span12">
-                        <div class="alert alert-error">
-                          <%= flash[:error] %>
-                        </div>
-                      </div>
-                    </div>
-                    <% end %>
                       <div class="form profile">
                         <%= form_for(@store) do |f| %>
                         <div class="control-group">
