--- a/app/views/wishlists/show.html.erb
+++ b/app/views/wishlists/show.html.erb
@@ -33,10 +33,12 @@
                           <td><%= item.number %></td>
                           <td><%= item.color %></td>
                           <td>Min. Quantity: <%= item.min_quantity %></td>
-                          <td><%= link_to remove_wishlist_item_path(@wishlist, item), :method => :delete, :data => {:confirm => "Are you sure?"}, :class => "btn"  do %>
-                              <i class='icon-trash'></i>
-                            <% end %>
-                          </td>
+                          <% if @wishlist.user == current_user %>
+                            <td><%= link_to remove_wishlist_item_path(@wishlist, item), :method => :delete, :data => {:confirm => "Are you sure?"}, :class => "btn", :id => item  do %>
+                                <i class='icon-trash'></i>
+                              <% end %>
+                            </td>
+                          <% end %>
                         </tr>
                         <% end %>
                       </tbody>
